fixed hero spacing on all sizes on shows page

--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -16,44 +16,56 @@
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
-    padding: 2rem 0;
-    @include mixins.tablet {
-        padding: 4rem 0;
-    }
+    padding: 10vw 0;
     @include mixins.desktop {
-        padding: 16rem 0;
+        padding: 20vw 0;
     }
 
     &__container {
         @include mixins.container;
         @include mixins.tablet {
-            width: 65%;
+            width: 75%;
         }
         @include mixins.desktop {
+            width: 100%;
             display: flex;
             align-items: flex-end;
             justify-content: space-between;
         }
     }
 
-    &__heading, &__subheading {
+    &__heading {
+        margin-bottom: 1rem;
         @include mixins.row;
+    }
+
+    &__subheading {
+        @include mixins.row;
+        font-size: 1rem;
+        font-weight: 400;
+        @include mixins.tablet {
+            font-size: 1.5rem;
+        }
     }
 
     &__soundcloud {
         @include mixins.tablet {
-            width: 80%;
+            width: 70%;
             margin-top: 2rem;
         }
         @include mixins.desktop {
-            width: 90%;
-            margin-left: 6rem;
+            width: 80%;
+            margin-left: 4rem;
         }
     }
 }
 
 .shows {
     margin-top: 2rem;
+    @include mixins.tablet {
+        margin-top: 0;
+        margin-bottom: 1rem;
+    }
     @include mixins.desktop {       
         @include mixins.container;
         display: flex;
